--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "next-offline": "^5.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-transition-group": "^4.4.1",
     "swr": "^0.3.8",
     "tailwindcss": "^1.9.6",
+    "web-api-hooks": "^3.0.2",
     "worker-loader": "^3.0.5"
   },
   "devDependencies": {
@@ -45,6 +47,7 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
+    "@types/react-transition-group": "^4.4.0",
     "babel-plugin-lodash": "^3.3.4",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
