--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     ]
   },
   "dependencies": {
+    "@headlessui/react": "^0.2.0",
     "@next/bundle-analyzer": "^10.0.1",
     "@tailwindcss/ui": "^0.7.2",
     "@zeit/next-workers": "^1.0.0",
