--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@next/bundle-analyzer": "^10.0.1",
     "@tailwindcss/ui": "^0.7.2",
     "@zeit/next-workers": "^1.0.0",
+    "axios": "^0.21.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
@@ -39,12 +40,14 @@
     "react-transition-group": "^4.4.1",
     "swr": "^0.3.8",
     "tailwindcss": "^1.9.6",
+    "tailwindcss-filters": "^3.0.0",
     "web-api-hooks": "^3.0.2",
     "worker-loader": "^3.0.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/axios": "^0.14.0",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
