--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
-    "next": "^10.0.1",
+    "next": "10.0.0",
     "next-compose-plugins": "^2.2.0",
     "next-offline": "^5.0.3",
     "react": "^17.0.1",
