--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-transition-group": "^4.4.1",
+    "react-twitter-embed": "^3.0.3",
+    "storeon": "^3.1.1",
     "swr": "^0.3.8",
     "tailwindcss": "^1.9.6",
     "tailwindcss-aspect-ratio": "^3.0.0",
@@ -49,6 +51,7 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@types/axios": "^0.14.0",
+    "@types/lodash": "^4.14.165",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
