chore: staged changes

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@zeit/next-workers": "^1.0.0",
     "axios": "^0.21.0",
     "lodash": "^4.17.20",
+    "markdown-to-jsx": "^7.0.1",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "next": "10.0.0",
@@ -52,6 +53,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.165",
+    "@types/markdown-to-jsx": "^6.11.3",
     "@types/moment": "^2.13.0",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
