--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
     "@types/react-transition-group": "^4.4.0",
+    "@types/wicg-mediasession": "^1.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.1",
