--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -1,11 +1,15 @@
 name: Super-Linter
 
 # Run this workflow every time a new commit pushed to your repository
+# on:  
+#   schedule:
+#     - cron: '2 * * * *'
+
 on: push
 
 jobs:
   cron:
-    name: Cronjob
+    name: Database Fetch
     runs-on: ubuntu-latest
 
     steps:
@@ -14,7 +18,7 @@ jobs:
       - name: "Init: Node"
         uses: actions/setup-node@v1
         with:
-          node-version: "lts/*"
+          node-version: "14.*"
       - name: "Cache: node_modules"
         uses: actions/cache@v2
         with:
@@ -32,4 +36,7 @@ jobs:
       - name: "Init: Install dependencies"
         run: yarn
       - name: "Exec: Check for update"
+        env:
+          PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
+          DEPLOY_HOOKS: ${{ secrets.DEPLOY_HOOKS }}
         run: yarn cron:hooker
