--- a/.github/workflows/cron.yml
+++ b/.github/workflows/cron.yml
@@ -32,7 +32,7 @@ jobs:
       - name: "Init: Install dependencies"
         run: yarn
 
-      - name: "Exec: Read metadata for cache"
+      - name: "Exec: Check for update"
         id: prepare_metadata
         env:
           PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
@@ -46,8 +46,9 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-sekai-next-data-json-
 
-      - name: "Exec: Check for update"
+      - name: "Exec: Deploy Hooks"
         env:
           PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
           DEPLOY_HOOKS: ${{ secrets.DEPLOY_HOOKS }}
+          DB_UPDATED_AT: ${{ steps.prepare_metadata.outputs.updatedTimestamp }}
         run: yarn cron:hooker
