--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
     "@tailwindcss/ui": "^0.7.2",
     "@zeit/next-workers": "^1.0.0",
     "axios": "^0.21.0",
+    "dayjs": "^1.9.5",
     "lodash": "^4.17.20",
     "markdown-to-jsx": "^7.0.1",
-    "moment": "^2.29.1",
-    "moment-timezone": "^0.5.31",
     "next": "10.0.0",
     "next-compose-plugins": "^2.2.0",
     "next-offline": "^5.0.3",
@@ -56,7 +55,6 @@
     "@types/axios": "^0.14.0",
     "@types/lodash": "^4.14.165",
     "@types/markdown-to-jsx": "^6.11.3",
-    "@types/moment": "^2.13.0",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.56",
     "@types/react-transition-group": "^4.4.0",
