--- a/package.json
+++ b/package.json
@@ -37,8 +37,11 @@
     "next": "10.0.0",
     "next-compose-plugins": "^2.2.0",
     "next-offline": "^5.0.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "next-plugin-preact": "^3.0.3",
+    "preact": "^10.5.7",
+    "preact-render-to-string": "^5.1.11",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
     "react-transition-group": "^4.4.1",
     "react-twitter-embed": "^3.0.3",
     "storeon": "^3.1.1",
