--- a/package.json
+++ b/package.json
@@ -30,26 +30,28 @@
   "dependencies": {
     "@headlessui/react": "^0.2.0",
     "@next/bundle-analyzer": "^10.0.1",
-    "@tailwindcss/ui": "^0.7.2",
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.3.1",
     "@zeit/next-workers": "^1.0.0",
     "axios": "^0.21.0",
     "dayjs": "^1.9.5",
     "lodash": "^4.17.20",
     "markdown-to-jsx": "^7.0.1",
-    "next": "10.0.0",
+    "next": "^10.0.2",
     "next-compose-plugins": "^2.2.0",
     "next-offline": "^5.0.3",
     "next-plugin-preact": "^3.0.3",
+    "postcss": "^8.1.7",
     "preact": "^10.5.7",
     "preact-render-to-string": "^5.1.11",
-    "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-transition-group": "^4.4.1",
     "react-twitter-embed": "^3.0.3",
     "storeon": "^3.1.1",
     "swr": "^0.3.8",
-    "tailwindcss": "^1.9.6",
-    "tailwindcss-aspect-ratio": "^3.0.0",
+    "tailwindcss": "^2.0.1",
     "tailwindcss-filters": "^3.0.0",
     "web-api-hooks": "^3.0.2",
     "worker-loader": "^3.0.5"
