--- a/package.json
+++ b/package.json
@@ -38,15 +38,15 @@
     "dayjs": "^1.9.5",
     "lodash": "^4.17.20",
     "markdown-to-jsx": "^7.0.1",
-    "next": "^10.0.2",
+    "next": "^10.0.3",
     "next-compose-plugins": "^2.2.0",
     "next-offline": "^5.0.3",
     "next-plugin-preact": "^3.0.3",
     "postcss": "^8.1.7",
     "preact": "^10.5.7",
-    "preact-render-to-string": "^5.1.11",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "preact-render-to-string": "^5.1.12",
+    "react": "npm:@preact/compat",
+    "react-dom": "npm:@preact/compat",
     "react-transition-group": "^4.4.1",
     "react-twitter-embed": "^3.0.3",
     "storeon": "^3.1.1",
