--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@zeit/next-workers": "^1.0.0",
     "axios": "^0.21.0",
     "dayjs": "^1.9.5",
+    "ical-generator": "^1.15.3",
     "lodash": "^4.17.20",
     "markdown-to-jsx": "^7.0.1",
     "next": "^10.0.3",
