--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "npm:@preact/compat",
     "react-transition-group": "^4.4.1",
     "react-twitter-embed": "^3.0.3",
+    "sitemap": "^6.3.5",
     "storeon": "^3.1.1",
     "swr": "^0.3.8",
     "tailwindcss": "^2.0.1",
