--- a/package.json
+++ b/package.json
@@ -39,15 +39,16 @@
     "ical-generator": "^1.15.3",
     "lodash": "^4.17.20",
     "markdown-to-jsx": "^7.0.1",
-    "next": "^10.0.3",
+    "next": "^10.0.5",
     "next-compose-plugins": "^2.2.0",
     "next-offline": "^5.0.3",
     "next-plugin-preact": "^3.0.3",
     "postcss": "^8.1.7",
-    "preact": "^10.5.7",
+    "preact": "^10.5.10",
     "preact-render-to-string": "^5.1.12",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
+    "react-ssr-prepass": "npm:preact-ssr-prepass",
     "react-transition-group": "^4.4.1",
     "react-twitter-embed": "^3.0.3",
     "sitemap": "^6.3.5",
