--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "ical-generator": "^2.2.0",
     "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.1.3",
-    "next": "^10.2.3",
+    "next": "^11.0.1",
     "next-compose-plugins": "^2.2.0",
     "next-offline": "^5.0.5",
     "next-plugin-preact": "^3.0.6",
@@ -61,6 +61,8 @@
     "worker-loader": "^3.0.8"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@types/axios": "^0.14.0",
