--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
-    "@zeit/next-workers": "^1.0.0",
     "axios": "^0.21.0",
     "dayjs": "^1.10.6",
     "ical-generator": "^2.2.0",
     "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.1.3",
+    "moize": "^6.0.3",
     "next": "^11.0.1",
     "next-compose-plugins": "^2.2.0",
     "next-offline": "^5.0.5",
@@ -49,15 +49,12 @@
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
     "react-ssr-prepass": "npm:preact-ssr-prepass",
-    "react-twitter-embed": "^3.0.3",
     "sitemap": "^7.0.0",
     "storeon": "^3.1.1",
-    "swr": "^0.5.6",
     "tailwindcss": "^2.2.4",
     "tailwindcss-filters": "^3.0.0",
     "web-api-hooks": "^3.0.2",
-    "webpack": "4.46.0",
-    "worker-loader": "^3.0.8"
+    "webpack": "4.46.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
