--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "tailwindcss": "^2.2.4",
     "tailwindcss-filters": "^3.0.0",
     "web-api-hooks": "^3.0.2",
-    "webpack": "4.46.0"
+    "webpack": "^5.45.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
