--- a/package.json
+++ b/package.json
@@ -42,13 +42,9 @@
     "next": "^11.0.1",
     "next-compose-plugins": "^2.2.1",
     "next-offline": "^5.0.5",
-    "next-plugin-preact": "^3.0.6",
     "postcss": "^8.3.5",
-    "preact": "^10.5.14",
-    "preact-render-to-string": "^5.1.19",
-    "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat",
-    "react-ssr-prepass": "npm:preact-ssr-prepass",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sitemap": "^7.0.0",
     "storeon": "^3.1.1",
     "tailwindcss": "^2.2.4",
