--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
     "axios": "^0.21.0",
+    "chrome-aws-lambda": "^10.1.0",
     "dayjs": "^1.10.6",
     "ical-generator": "^2.2.0",
     "lodash": "^4.17.21",
@@ -46,6 +47,7 @@
     "postcss": "^8.3.5",
     "preact": "^10.5.14",
     "preact-render-to-string": "^5.1.19",
+    "puppeteer-core": "^10.1.0",
     "react": "npm:@preact/compat",
     "react-dom": "npm:@preact/compat",
     "react-ssr-prepass": "npm:preact-ssr-prepass",
