--- a/package.json
+++ b/package.json
@@ -41,27 +41,21 @@
     "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.1.3",
     "moize": "^6.1.0",
-    "next": "^11.1.2",
+    "next": "^12.0.7",
     "next-compose-plugins": "^2.2.1",
     "next-offline": "^5.0.5",
-    "next-plugin-preact": "^3.0.6",
     "postcss": "^8.3.11",
-    "preact": "^10.5.14",
-    "preact-render-to-string": "^5.1.19",
     "puppeteer-core": "^10.4.0",
-    "react": "npm:@preact/compat",
-    "react-dom": "npm:@preact/compat",
-    "react-ssr-prepass": "npm:preact-ssr-prepass",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sitemap": "^7.0.0",
     "storeon": "^3.1.1",
     "tailwindcss": "^2.2.16",
     "tailwindcss-filters": "^3.0.0",
     "web-api-hooks": "^3.0.2",
-    "webpack": "^5.61.0"
+    "webpack": "^5.65.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/preset-env": "^7.15.6",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^14.1.0",
     "@types/axios": "^0.14.0",
@@ -70,10 +64,10 @@
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.24",
     "@types/wicg-mediasession": "^1.1.3",
-    "babel-plugin-lodash": "^3.3.4",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.1",
+    "scheduler": "^0.20.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
