--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "prepare": "husky install",
     "build": "next build",
     "dev": "yarn --silent dev:debugger",
     "dev:normal": "next",
@@ -28,47 +29,47 @@
     ]
   },
   "dependencies": {
-    "@headlessui/react": "^1.2.0",
-    "@heroicons/react": "^1.0.4",
-    "@next/bundle-analyzer": "^11.1.2",
-    "@tailwindcss/aspect-ratio": "^0.3.0",
-    "@tailwindcss/forms": "^0.3.3",
-    "@tailwindcss/typography": "^0.4.1",
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "@next/bundle-analyzer": "^12.0.8",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
     "axios": "^0.24.0",
     "chrome-aws-lambda": "^10.1.0",
     "dayjs": "^1.10.7",
-    "ical-generator": "^3.0.1",
+    "ical-generator": "^3.1.1",
     "lodash": "^4.17.21",
-    "markdown-to-jsx": "^7.1.3",
+    "markdown-to-jsx": "^7.1.5",
     "moize": "^6.1.0",
-    "next": "^12.0.7",
+    "next": "^12.0.8",
     "next-compose-plugins": "^2.2.1",
     "next-offline": "^5.0.5",
-    "postcss": "^8.3.11",
-    "puppeteer-core": "^10.4.0",
+    "postcss": "^8.4.5",
+    "puppeteer-core": "^13.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sitemap": "^7.0.0",
-    "storeon": "^3.1.1",
-    "tailwindcss": "^2.2.16",
+    "sitemap": "^7.1.0",
+    "storeon": "^3.1.4",
+    "tailwindcss": "^3.0.13",
     "tailwindcss-filters": "^3.0.0",
     "web-api-hooks": "^3.0.2",
-    "webpack": "^5.65.0"
+    "webpack": "^5.66.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^14.1.0",
+    "@commitlint/cli": "^16.0.2",
+    "@commitlint/config-conventional": "^16.0.0",
     "@types/axios": "^0.14.0",
-    "@types/lodash": "^4.14.175",
+    "@types/lodash": "^4.14.178",
     "@types/markdown-to-jsx": "^7.0.1",
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.24",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
     "@types/wicg-mediasession": "^1.1.3",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
-    "prettier": "^2.4.1",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.7",
+    "prettier": "^2.5.1",
     "scheduler": "^0.20.2",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
