--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "next-tailwind-ui",
+  "name": "sekai-next",
   "version": "1.0.0",
-  "description": "Complete Next template for repid development",
+  "description": "Project Sekai wiki, powered by NextJS",
   "repository": "git@github.com:rayriffy/next-tailwind-ui.git",
   "author": "Phumrapee Limpianchop <contact@rayriffy.com>",
   "license": "MIT",
@@ -23,47 +23,45 @@
     ]
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.3",
-    "@heroicons/react": "^1.0.5",
-    "@next/bundle-analyzer": "^12.0.10",
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^1.0.6",
+    "@next/bundle-analyzer": "^12.2.3",
     "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.2",
-    "axios": "^0.25.0",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.4",
+    "axios": "^0.27.2",
     "chrome-aws-lambda": "^10.1.0",
-    "dayjs": "^1.10.7",
-    "ical-generator": "^3.2.1",
+    "dayjs": "^1.11.4",
+    "ical-generator": "^3.5.1",
     "lodash": "^4.17.21",
-    "markdown-to-jsx": "^7.1.6",
-    "moize": "^6.1.0",
-    "next": "^12.0.10",
+    "markdown-to-jsx": "^7.1.7",
+    "moize": "^6.1.1",
+    "next": "^12.2.3",
     "next-compose-plugins": "^2.2.1",
     "next-offline": "^5.0.5",
-    "postcss": "^8.4.6",
-    "puppeteer-core": "^13.3.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "postcss": "^8.4.14",
+    "puppeteer-core": "^15.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sitemap": "^7.1.1",
     "storeon": "^3.1.4",
-    "tailwindcss": "^3.0.22",
+    "tailwindcss": "^3.1.7",
     "tailwindcss-filters": "^3.0.0",
     "web-api-hooks": "^3.0.2",
-    "webpack": "^5.68.0"
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.0.0",
-    "@types/axios": "^0.14.0",
-    "@types/lodash": "^4.14.178",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
+    "@types/lodash": "^4.14.182",
     "@types/markdown-to-jsx": "^7.0.1",
-    "@types/node": "^17.0.19",
-    "@types/react": "^17.0.39",
+    "@types/node": "^18.6.2",
+    "@types/react": "^18.0.15",
     "@types/wicg-mediasession": "^1.1.3",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.3.4",
-    "prettier": "^2.5.1",
-    "scheduler": "^0.20.2",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5"
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
