--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,25 @@
-name: Deploy
+name: deploys
 
 on:
   push:
-    branches: [ "main" ]
-  workflow_dispatch:
+    branches:
+      - master
 
 jobs:
-  runtime:
+  build:
+    name: build
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
     steps:
-      - name: 'Intitialize: Checkout repository'
-        uses: actions/checkout@v3
-      - name: 'Intitialize: Summon NodeJS'
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+
+      - uses: docker/login-action@v2
         with:
-          node-version: 18
-      - name: 'Intitialize: Configure pnpm'
-        uses: pnpm/action-setup@v2.2.4
-        id: pnpm-install
+          registry: ghcr.io
+          username: rayriffy
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - uses: ./.actions/build-and-push
         with:
-          version: 7
-          run_install: false
-      - name: 'Cache: node_modules'
-        uses: actions/cache@v3
-        with:
-          path: |
-            node_modules
-            ~/.local/share/pnpm/store/v3
-          key: ${{ runner.OS }}-x86-node18-pnpm7-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.OS }}-x86-node18-pnpm7-${{ env.cache-name }}-
-            ${{ runner.OS }}-x86-node18-pnpm7-
-      - name: 'Intitialize: Install dependencies'
-        run: pnpm -r i --shamefully-hoist --prefer-offline
-      - name: 'Execute: Build'
-        run: pnpm next build
-      - name: 'Execute: Export into static files'
-        run: pnpm next export
-      - name: 'Deployment: Upload artifacts'
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: out
-      - name: 'Deployment: Deploy to target'
-        id: deployment
-        uses: actions/deploy-pages@v1
-      - name: 'Post-deplotyment: Logging'
-        run: echo "Deployed at ${{ steps.deployment.outputs.page_url }}"
+          target_image: ghcr.io/rayriffy/sekai-runtime
+          deploys_user: ${{ secrets.DEPLOYS_AUTH_USER }}
+          deploys_pass: ${{ secrets.DEPLOYS_AUTH_PASS }}
